correct FieldDatum naming
